MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/SalesConsultant__c.field-meta.xml
<CustomField>
    <fullName>SalesConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>