MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/SalesManager__c.field-meta.xml
<CustomField>
    <fullName>SalesManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesManagers</relationshipName>
    <type>Lookup</type>
</CustomField>