MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/showDocumentList__c.field-meta.xml
<CustomField>
    <fullName>showDocumentList__c</fullName>
    <formula>DATEVALUE(CreatedDate) &lt;= DATEVALUE(&apos;2025-12-07&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>showDocumentList</label>
    <type>Checkbox</type>
</CustomField>