MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/SubSource__c.field-meta.xml
<CustomField>
    <fullName>SubSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>