MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Total_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount__c</fullName>
    <label>Total Booking Amount</label>
    <summarizedField>Booking_Fee_Line__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Booking_Fee_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>