MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Total_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Amount__c</fullName>
    <label>Total Received Amount</label>
    <summarizedField>Booking_Fee_Line__c.Total_Paid_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Fee_Line__c.Total_Paid_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Fee_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>