MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Unit_Allocated_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Allocated_Status__c</fullName>
    <label>Unit Allocated Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Un-Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>