MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Verification_In_Branch__c.field-meta.xml
<CustomField>
    <fullName>Verification_In_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when a Sales Console rep releases a booking from the identity-verification gate, choosing to verify the customer in branch instead of waiting for them to complete the Signzy link. Written only by SalesConsoleVerificationService. History is tracked because an unverified booking that proceeded must be auditable.</description>
    <inlineHelpText>Ticked when this booking was released from the verification gate to be verified in branch.</inlineHelpText>
    <label>Verification In Branch</label>
    <type>Checkbox</type>
</CustomField>