MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/EID_ExpiryDate_Cannot_be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>EID_ExpiryDate_Cannot_be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( EmiratesIDExpiryDate__c ), NOT(ISBLANK (EmiratesIDExpiryDate__c)), EmiratesIDExpiryDate__c &lt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EmiratesIDExpiryDate__c</errorDisplayField>
    <errorMessage>Emirates ID Expiry Date cannot be a Past Date</errorMessage>
</ValidationRule>