MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Emirates_Id_ExpiryDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_Id_ExpiryDate_Validation</fullName>
    <active>false</active>
    <description>Emirates ID expiry date field is mandatory if the lead is UAE resident</description>
    <errorConditionFormula>AND(TEXT(UAE_Resident_Status__c) = &apos;Resident&apos;, ISBLANK(EmiratesIDExpiryDate__c))</errorConditionFormula>
    <errorDisplayField>EmiratesIDExpiryDate__c</errorDisplayField>
    <errorMessage>Emirates ID Expiry Date field is mandatory if the Lead is a UAE Resident</errorMessage>
</ValidationRule>