MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Emirates_ID_Mandatory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_ID_Mandatory_Validation</fullName>
    <active>false</active>
    <description>If UAE Resident, then Emirates ID is mandatory</description>
    <errorConditionFormula>AND(TEXT(UAE_Resident_Status__c) = &apos;Resident&apos;, ISBLANK(EIDNumber__c))</errorConditionFormula>
    <errorDisplayField>EIDNumber__c</errorDisplayField>
    <errorMessage>Emirates ID Number field is mandatory if the Lead is a UAE Resident</errorMessage>
</ValidationRule>