MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Emirates_Id_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_Id_Number_Format</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(UAE_Resident_Status__c , &apos;Resident&apos;)
&amp;&amp;
NOT(ISPICKVAL(Source_Entity__c , &apos;Modon - Egypt&apos;))
&amp;&amp;
NOT(ISBLANK(En_EIDNumber__c))
&amp;&amp;
NOT(REGEX(En_EIDNumber__c, &quot;^(784)-[0-9]{4}-[0-9]{7}-[0-9]{1}$&quot;))</errorConditionFormula>
    <errorDisplayField>En_EIDNumber__c</errorDisplayField>
    <errorMessage>Emirates Id Number should be in the format: 784-xxxx-xxxxxxx-x</errorMessage>
</ValidationRule>