MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Nationality_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>Nationality_Cannot_be_masked</fullName>
    <active>true</active>
    <description>Please do not enter masked values in Nationality</description>
    <errorConditionFormula>AND(
ISCHANGED(Nationality__c),
CONTAINS(TEXT(Nationality__c), &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Nationality</errorMessage>
</ValidationRule>