MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Passport_Expir_Date_Should_not_be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Expir_Date_Should_not_be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( PassportExpiryDate__c ), NOT(ISBLANK (PassportExpiryDate__c)), PassportExpiryDate__c &lt; TODAY() )</errorConditionFormula>
    <errorDisplayField>PassportExpiryDate__c</errorDisplayField>
    <errorMessage>Passport Expiry Date cannot be a Past Date</errorMessage>
</ValidationRule>