MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Passport_ExpiryDate_Mandatory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_ExpiryDate_Mandatory_Validation</fullName>
    <active>false</active>
    <description>If not a UAE Resident, then Passport Expiry Date field is mandatory</description>
    <errorConditionFormula>AND(TEXT(UAE_Resident_Status__c) = &apos;Non-Resident&apos;, ISBLANK(PassportExpiryDate__c))</errorConditionFormula>
    <errorDisplayField>PassportExpiryDate__c</errorDisplayField>
    <errorMessage>Passport Expiry Date field is mandatory if the Lead is not a UAE Resident</errorMessage>
</ValidationRule>