MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Passport_Issue_Date_Should_not_be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Issue_Date_Should_not_be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK (PassportIssueDate__c)), PassportIssueDate__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>PassportIssueDate__c</errorDisplayField>
    <errorMessage>Passport Issue Date cannot be a Future Date</errorMessage>
</ValidationRule>