MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Passport_Number_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number_Format_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(UAE_Resident_Status__c, &apos;Non-Resident&apos;),
NOT(ISPICKVAL(Source_Entity__c , &apos;Modon - Egypt&apos;)),
NOT(ISBLANK(En_PassportNumber__c)),
NOT(REGEX(En_PassportNumber__c, &quot;^[a-zA-Z0-9]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>En_PassportNumber__c</errorDisplayField>
    <errorMessage>Passport number must be in a valid format</errorMessage>
</ValidationRule>