MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Passport_Number_Mandatory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number_Mandatory_Validation</fullName>
    <active>false</active>
    <description>If not a UAE Resident, then Passport Number field is mandatory</description>
    <errorConditionFormula>AND(TEXT(UAE_Resident_Status__c) = &apos;Non-Resident&apos;, ISBLANK(En_PassportNumber__c), TEXT(Source_Entity__c) != &apos;Modon - Egypt&apos;)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Passport Number field is mandatory if the Lead is not a UAE Resident</errorMessage>
</ValidationRule>