MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/PassportNumber_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>PassportNumber_Cannot_be_masked</fullName>
    <active>true</active>
    <description>Please do not enter masked values in Passport Number</description>
    <errorConditionFormula>AND(
ISCHANGED(PassportNumber__c),
CONTAINS(PassportNumber__c, &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Passport Number</errorMessage>
</ValidationRule>