MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Require_Loss_Reason_for_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Loss_Reason_for_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISPICKVAL(Loss_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Loss Reason is required when the Opportunity is marked as Closed Lost.</errorMessage>
</ValidationRule>