MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Require_ProjectInterest_When_CrossSell.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_ProjectInterest_When_CrossSell</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Loss_Reason__c, &quot;Lost-Cross Sell&quot;),
    ISPICKVAL(ProjectInterest__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please specify Project Interested when Loss Reason is Lost-Cross Sell.</errorMessage>
</ValidationRule>