MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Residency_and_Nationality_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Residency_and_Nationality_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  TEXT(Source_Entity__c) &lt;&gt; &apos;Modon - Egypt&apos;,
  OR(
    TEXT(StageName) = &apos;Discussion In Progress&apos;,
    TEXT(StageName) = &apos;Unit Selection&apos;,
    TEXT(StageName) = &apos;Closed Won&apos;,
    TEXT(StageName) = &apos;Unit selection in progress&apos;
  ),
  OR(
    ISBLANK(TEXT(UAE_Resident_Status__c)),
    ISBLANK(En_Nationality__c)
  )
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Residency and Nationality mandatory.</errorMessage>
</ValidationRule>