MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Sales_User_Cannot_Change_CT.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_User_Cannot_Change_CT</fullName>
    <active>true</active>
    <errorConditionFormula>(CONTAINS($UserRole.DeveloperName, &apos;Sales_Associate&apos;) || CONTAINS($UserRole.DeveloperName, &apos;Sales_Manager&apos;) || CONTAINS($UserRole.DeveloperName, &apos;Sales_Director&apos;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; (ISCHANGED(CustomerType__c))</errorConditionFormula>
    <errorMessage>Sales Users cannot change the Customer Type.</errorMessage>
</ValidationRule>