MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/Sales_user_cannot_change_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_user_cannot_change_field</fullName>
    <active>true</active>
    <errorConditionFormula>(CONTAINS($UserRole.DeveloperName, &apos;Sales_Associate&apos;) || CONTAINS($UserRole.DeveloperName, &apos;Sales_Manager&apos;) || CONTAINS($UserRole.DeveloperName, &apos;Sales_Director&apos;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; (ISCHANGED( StageName )) &amp;&amp;  (PRIORVALUE(StageName) == &apos;Registration in progress&apos;) &amp;&amp;  ISPICKVAL(StageName, &apos;Unit selection in progress&apos;)</errorConditionFormula>
    <errorMessage>Sales associate team is not allowed to change the stage.</errorMessage>
</ValidationRule>