MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/UAE_NON_Resident_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>UAE_NON_Resident_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( UAE_Resident_Status__c , &apos;Non-Resident&apos;), OR(  ISBLANK(PassportNumber__c) , ISNULL( PassportIssueDate__c ),  ISNULL( PassportExpiryDate__c )))</errorConditionFormula>
    <errorMessage>Passport details(Passport Number, Passport Issue Date, Passport Expiry Date) are required for non resident.</errorMessage>
</ValidationRule>