MODON MRE BPDEV/force-app/main/default/objects/Opportunity/validationRules/UAE_Resident_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>UAE_Resident_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( UAE_Resident_Status__c , &apos;Resident&apos;), OR(ISBLANK( EIDNumber__c ), ISNULL( EmiratesIDExpiryDate__c )) )</errorConditionFormula>
    <errorMessage>Emirates Id details(Emirates ID Number, Emirates ID Expiry Date) is required for resident.</errorMessage>
</ValidationRule>