MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/All_Egypt_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Egypt_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Entity__c</field>
        <operation>equals</operation>
        <value>Modon - Egypt</value>
    </filters>
    <label>All Egypt Opportunities</label>
    <sharedTo>
        <group>Modon_Egypt_Finance_Team_Group</group>
    </sharedTo>
</ListView>