MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/ClosingThisMonth.listView-meta.xml
<ListView>
    <fullName>ClosingThisMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PrimaryContact__c</columns>
    <columns>BrokerAgent__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>RegistrationStatus__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Closing This Month</label>
    <sharedTo>
        <role>Sales_Associate_T1</role>
        <role>Sales_Associate_T2</role>
        <role>Sales_Associate_T3</role>
        <role>Sales_Associate_T4</role>
        <role>Sales_Associate_T5</role>
        <role>Sales_Director</role>
        <role>Sales_Manager_T1</role>
        <role>Sales_Manager_T2</role>
        <role>Sales_Manager_T3</role>
        <role>Sales_Manager_T4</role>
        <role>Sales_Manager_T5</role>
        <role>Sales_Operations_Associate</role>
        <role>Sales_Operations_Manager</role>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>