MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Opportunity Pipeline</label>
    <sharedTo>
        <role>Sales_Associate_T1</role>
        <role>Sales_Associate_T2</role>
        <role>Sales_Associate_T3</role>
        <role>Sales_Associate_T4</role>
        <role>Sales_Associate_T5</role>
        <role>Sales_Director</role>
        <role>Sales_Manager_T1</role>
        <role>Sales_Manager_T2</role>
        <role>Sales_Manager_T3</role>
        <role>Sales_Manager_T4</role>
        <role>Sales_Manager_T5</role>
        <role>Sales_Operations_Associate</role>
        <role>Sales_Operations_Manager</role>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>