MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/Marisol_s_Opportunities.listView-meta.xml
<ListView>
    <fullName>Marisol_s_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Marisol</value>
    </filters>
    <label>Marisol&apos;s Opportunities</label>
    <sharedTo>
        <group>Marisol_s_User</group>
    </sharedTo>
</ListView>