MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/My_Opportunity_In_progress.listView-meta.xml
<ListView>
    <fullName>My_Opportunity_In_progress</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Submitted Opportunity</label>
    <sharedTo>
        <group>Partner_Users</group>
    </sharedTo>
</ListView>