MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/My_Recently_View_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Recently_View_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>ProjectInterest__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>My Recently View Opportunities</label>
    <sharedTo>
        <group>InternationalSales_1759232258750</group>
    </sharedTo>
</ListView>