MODON MRE BPDEV/force-app/main/default/objects/Opportunity/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
    <sharedTo>
        <role>Sales_Associate_T1</role>
        <role>Sales_Associate_T2</role>
        <role>Sales_Associate_T3</role>
        <role>Sales_Associate_T4</role>
        <role>Sales_Associate_T5</role>
        <role>Sales_Director</role>
        <role>Sales_Manager_T1</role>
        <role>Sales_Manager_T2</role>
        <role>Sales_Manager_T3</role>
        <role>Sales_Manager_T4</role>
        <role>Sales_Manager_T5</role>
        <role>Sales_Operations_Associate</role>
        <role>Sales_Operations_Manager</role>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>